2009-11-24  Simon Fraser  <simon.fraser@apple.com>

        No Review.

        Fix spelling error ("depenedencies").

        * Scripts/build-webkit:

2009-11-24  Mark Rowe  <mrowe@apple.com>

        Land the configuration that includes the two debug GTK Linux builders.

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2009-11-24  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/31840> bisect-builds broke after r50080

        Reviewed by Dan Bernstein.

        * Scripts/bisect-builds:
        (mountAndRunNightly): Switched back to using backticks to run
        the hdiutil command since exec() will terminate the existing
        script, which is not what we want.  Store the output of
        File::Spec->devnull() in a variable for use in the hdiutil
        detach commands.

2009-11-23  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Include "config.h" to meet Coding Style Guidelines
        https://bugs.webkit.org/show_bug.cgi?id=31792

        * DumpRenderTree/pthreads/JavaScriptThreadingPthreads.cpp:
        * DumpRenderTree/qt/jsobjects.cpp:
        * DumpRenderTree/win/DRTDesktopNotificationPresenter.cpp:

2009-11-23  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Oliver Hunt.

        Implement new required function to pass test we used to pass. This
        change is required since r51294.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setAllowUniversalAccessFromFileURLs):

2009-11-23  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT: dumpBackForwardList() does not work properly with non-file URLs.
        https://bugs.webkit.org/show_bug.cgi?id=31775

        LayoutTestController::dumpBackForwardList() should work with local URLs
        as well as with normal URLs (in http tests for instance).